--- a/recipes/Southern Skillet Dinner.html
+++ b/recipes/Southern Skillet Dinner.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Southern Skillet Dinner</h1>
+    <h1 id="header">Southern Skillet Dinner</h1>
    <pre>                      <img src="../images/ssd.jpg" alt="Southern Skillet Dinner"></pre>
           <p>This is an awesome dinner on a cold winter night. It is inexpensive and a great way <br>
     for the kids to take in some vegetables without any fuss. It's great served with warm <br>bread and butter. 
@@ -29,5 +29,7 @@
         minutes.</li><br>
         <li><em>enjoy the meal</em></li>
 </ol>
+<a href="#header">return to top page</a><br>
+<a href="../index.html">return to main page</a>
 </body>
 </html>
